--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# VS Code
+.vscode
+
 # Prerequisites
 *.d
 
@@ -30,3 +33,7 @@
 *.exe
 *.out
 *.app
+
+# Python pre-compiled
+__pycache__/
+.pytest_cache/
